# Lima-camera-slsjungfrau

./: CMakeLists.txt  README.md  build-sls.sh  pom.xml  pom_64.xml
include/: SlsJungfrauCamera.h  SlsJungfrauCameraDarkThread.h  SlsJungfrauCameraFrame.h  SlsJungfrauCameraFrames.h  SlsJungfrauCameraReceiver.h  SlsJungfrauCameraReceiverInfo.h  SlsJungfrauCameraReceiverUserData.h  SlsJungfrauCameraReceivers.h  SlsJungfrauCameraThread.h  SlsJungfrauCompatibility.h  SlsJungfrauDetInfoCtrlObj.h  SlsJungfrauImageSize.h  SlsJungfrauInterface.h  SlsJungfrauSyncCtrlObj.h
python/: __init__.py
slsDetectorPackage/: .gitignore
slsDetectorPackage/manual/manual-acq/: Makefile  main.cpp  sls_detector_funcs.h
slsDetectorPackage/manual/manual-test/: Camera.cpp  Camera.h  CameraReceiver.cpp  CameraReceiver.h  CameraReceivers.cpp  CameraReceivers.h  Makefile  RegExUtils.cpp  RegExUtils.h  main.cpp
slsDetectorPackage/slsDetectorCalibration/moenchExecutables/: moench03ClusterFinder.cpp  moenchZmqClusterFinder.cpp
slsDetectorPackage/slsDetectorGui/slsDetectorPlotting/include/: SlsQt1DPlot.h  SlsQt2DPlot.h  SlsQt2DPlotLayout.h
slsDetectorPackage/slsDetectorGui/slsDetectorPlotting/src/: SlsQt1DPlot.cxx  SlsQt2DPlot.cxx  SlsQt2DPlotLayout.cxx
slsDetectorPackage/slsDetectorSoftware/: gitInfo.txt
slsDetectorPackage/slsDetectorSoftware/multiSlsDetector/: multiSlsDetector.cpp
slsDetectorPackage/slsDetectorSoftware/slsDetector/: gitInfoLib.h
slsDetectorPackage/slsReceiverSoftware/: gitInfo.txt
slsDetectorPackage/slsReceiverSoftware/include/: versionAPI.h
src/: SlsJungfrauCamera.cpp  SlsJungfrauCameraDarkThread.cpp  SlsJungfrauCameraFrame.cpp  SlsJungfrauCameraFrames.cpp  SlsJungfrauCameraReceiver.cpp  SlsJungfrauCameraReceiverInfo.cpp  SlsJungfrauCameraReceiverUserData.cpp  SlsJungfrauCameraReceivers.cpp  SlsJungfrauCameraThread.cpp  SlsJungfrauDetInfoCtrlObj.cpp  SlsJungfrauInterface.cpp  SlsJungfrauSyncCtrlObj.cpp
